WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83949
ASSERT in notifyChildInserted when HTMLMediaElement is removed from tree
https://bugs.webkit.org/show_bug.cgi?id=83949
Summary
ASSERT in notifyChildInserted when HTMLMediaElement is removed from tree
Eric Carlson
Reported
2012-04-13 15:30:27 PDT
When running layout tests in a debug build, I occasionally get a crash when "ASSERT(!eventDispatchForbidden())" fires in notifyChildInserted: WebCore::notifyChildInserted(WebCore::Node*) + 67 (ContainerNode.cpp:1012) WebCore::updateTreeAfterInsertion(WebCore::ContainerNode*, WebCore::Node*, bool) + 254 (ContainerNode.cpp:1099) WebCore::ContainerNode::appendChild(WTF::PassRefPtr<WebCore::Node>, int&, bool) + 587 (ContainerNode.cpp:570) WebCore::replaceChildrenWithText(WebCore::ContainerNode*, WTF::String const&, int&) + 427 (markup.cpp:1072) WebCore::HTMLElement::setInnerText(WTF::String const&, int&) + 403 (HTMLElement.cpp:447) WebCore::MediaControlRootElement::updateTimeDisplay() + 186 (MediaControlRootElement.cpp:411) WebCore::MediaControlRootElement::playbackStopped() + 114 (MediaControlRootElement.cpp:395) WebCore::HTMLMediaElement::updatePlayState() + 920 (HTMLMediaElement.cpp:3534) WebCore::HTMLMediaElement::pauseInternal() + 207 (HTMLMediaElement.cpp:2274) WebCore::HTMLMediaElement::pause() + 94 (HTMLMediaElement.cpp:2254) WebCore::HTMLMediaElement::removedFromDocument() + 72 (HTMLMediaElement.cpp:507) WebCore::ContainerNode::removedFromDocument() + 254 (ContainerNode.cpp:729) WebCore::Element::removedFromDocument() + 294 (Element.cpp:923) The problem is that the spec says that a media element must pause when removed from the tree, and when the controls update the text of one of the time displays changes.
Attachments
Proposed patch
(1.92 KB, patch)
2012-04-14 19:26 PDT
,
Eric Carlson
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-03
(6.50 MB, application/zip)
2012-04-14 20:56 PDT
,
WebKit Review Bot
no flags
Details
Updated patch.
(2.11 KB, patch)
2012-04-15 21:18 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2012-04-14 19:26:24 PDT
Created
attachment 137225
[details]
Proposed patch
Radar WebKit Bug Importer
Comment 2
2012-04-14 19:26:53 PDT
<
rdar://problem/11251561
>
WebKit Review Bot
Comment 3
2012-04-14 19:27:56 PDT
Attachment 137225
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 4
2012-04-14 20:56:34 PDT
Comment on
attachment 137225
[details]
Proposed patch
Attachment 137225
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12410019
New failing tests: fullscreen/video-controls-override.html
WebKit Review Bot
Comment 5
2012-04-14 20:56:43 PDT
Created
attachment 137230
[details]
Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Eric Carlson
Comment 6
2012-04-15 21:18:42 PDT
Created
attachment 137273
[details]
Updated patch.
WebKit Review Bot
Comment 7
2012-04-16 08:19:05 PDT
Comment on
attachment 137273
[details]
Updated patch. Clearing flags on attachment: 137273 Committed
r114258
: <
http://trac.webkit.org/changeset/114258
>
WebKit Review Bot
Comment 8
2012-04-16 08:19:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug