ASSERT in notifyChildInserted when HTMLMediaElement is removed from tree https://bugs.webkit.org/show_bug.cgi?id=83949

Reviewed by Antti Koivisto.

No new tests. I was not able to create a reproducible test case, but I have been unable
to reproduce the ASSERT that occassionally fired in existing tests since I have been
living on these changes.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::insertedIntoDocument): Call configureMediaControls.
(WebCore::HTMLMediaElement::removedFromDocument): Ditto.
(WebCore::HTMLMediaElement::configureMediaControls): Don't show controls when the
    media element is not in a Document.


git-svn-id: svn://svn.chromium.org/blink/trunk@114258 bbb929c8-8fbe-4397-9dbb-9b2b20218538