third_party/WebKit/Source/WebCore/html/HTMLMediaElement.cpp
@@ -498,11 +498,13 @@ void HTMLMediaElement::insertedIntoDocument()
     HTMLElement::insertedIntoDocument();
     if (!getAttribute(srcAttr).isEmpty() && m_networkState == NETWORK_EMPTY)
         scheduleLoad(MediaResource);
+    configureMediaControls();
 }
 
 void HTMLMediaElement::removedFromDocument()
 {
     LOG(Media, "HTMLMediaElement::removedFromDocument");
+    configureMediaControls();
     if (m_networkState > NETWORK_EMPTY)
         pause();
     if (m_isFullscreen)
@@ -4020,7 +4022,7 @@ bool HTMLMediaElement::createMediaControls()
 void HTMLMediaElement::configureMediaControls()
 {
 #if !ENABLE(PLUGIN_PROXY_FOR_VIDEO)
-    if (!controls()) {
+    if (!controls() || !inDocument()) {
         if (hasMediaControls())
             mediaControls()->hide();
         return;
